--- a/custom.css
+++ b/custom.css
@@ -27,7 +27,7 @@ h1+.gdoc-page__anchorwrap h1 {
   display:none;
 }
 
-aside.gdoc-nav{
+.gdoc-nav--main{
   max-height: 100vh;
   overflow-y: scroll;
 }
